# metric-collector

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  app.go  flags.go  go.mod  go.sum  main.go  nfpm.yaml  run.go
src/: main.rs
