[package]
name = "metric-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.18", features = ["derive"] }
hostname = "0.4.0"
humantime = "2.1.0"
mimalloc = { version = "0.1.43", features = ["secure"] }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["rt", "macros", "signal", "rt-multi-thread"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
